[package]
name = "chinese-format"
version = "0.6.2"
authors = ["Gianluca Costa <gianluca@gianlucacosta.info>"]
edition = "2021"
description = "Convert data types to Chinese, with Rust"
repository = "https://github.com/giancosta86/chinese-format"
license = "MIT"
keywords = ["convert", "Chinese", "logograms", "format", "measure"]
categories = [
    "localization",
    "date-and-time",
    "data-structures",
    "value-formatting",
]
include = [
    "LICENSE",
    "README.md",
    "/benches/",
    "/examples/",
    "/src/",
    "/tests/",
]

[dependencies]
chinese-number = "0.7.7"
lazy_static = "1.4.0"
digit-sequence = { version = "0.3.4", optional = true }
dyn-error = "0.1.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
speculate2 = "0.2"

[features]
currency = []
gregorian = ["digit-sequence"]

[package.metadata.docs.rs]
all-features = true
